buildscript {
	ext {
		springBootVersion = '3.0.1'
	}
	repositories {
		mavenCentral()
	}
}

apply plugin: 'java'
apply plugin: 'eclipse'
apply plugin: 'org.springframework.boot'
apply plugin: 'io.spring.dependency-management'

group = 'com.jmb.microservices.composite.product'
version = '1.0.0-SNAPSHOT'

sourceCompatibility = 18

repositories {
	mavenCentral()
}


dependencies {
	implementation project(':api')
	implementation project(':util')
	implementation('org.springframework.boot:spring-boot-starter-actuator')
	implementation('org.springframework.boot:spring-boot-starter-webflux')
	// Includes the OpenAPI swagger viewer
	implementation 'org.springdoc:springdoc-openapi-starter-webflux-ui:2.0.4'
	testImplementation('org.springframework.boot:spring-boot-starter-test')
	testImplementation('io.projectreactor:reactor-test')
}

if (JavaVersion.current().isJava8Compatible()) {
	allprojects {
		tasks.withType(Javadoc) {
			options.addStringOption('Xdoclint:none', '-quiet')
		}
	}
}

allprojects {
	tasks.withType(Javadoc).all { enabled = false }
}

test {
	useJUnitPlatform()
}

compileJava {
    options.compilerArgs += "--enable-preview"
}